# kurento-media-server

./: CMakeLists.txt
server/: CMakeLists.txt  CacheEntry.cpp  RequestCache.cpp  RequestCache.hpp  ResourceManager.cpp  ServerMethods.cpp  death_handler.cpp  loadConfig.cpp  logging.cpp  logging.hpp  main.cpp
server/transport/: CMakeLists.txt
server/transport/websocket/: CMakeLists.txt  WebSocketEventHandler.cpp  WebSocketRegistrar.cpp  WebSocketRegistrar.hpp  WebSocketTransport.cpp
server/transport/websocket/websocketpp/: close.hpp  connection.hpp  endpoint.hpp  frame.hpp  uri.hpp  utilities.hpp  version.hpp
server/transport/websocket/websocketpp/common/: asio.hpp  memory.hpp  thread.hpp
server/transport/websocket/websocketpp/config/: core.hpp
server/transport/websocket/websocketpp/extensions/permessage_deflate/: disabled.hpp  enabled.hpp
server/transport/websocket/websocketpp/http/: parser.hpp
server/transport/websocket/websocketpp/http/impl/: parser.hpp
server/transport/websocket/websocketpp/impl/: connection_impl.hpp  endpoint_impl.hpp
server/transport/websocket/websocketpp/logger/: basic.hpp
server/transport/websocket/websocketpp/processors/: base.hpp  hybi13.hpp
server/transport/websocket/websocketpp/roles/: client_endpoint.hpp  server_endpoint.hpp
server/transport/websocket/websocketpp/transport/asio/: connection.hpp  endpoint.hpp
server/transport/websocket/websocketpp/transport/asio/security/: none.hpp  tls.hpp
server/transport/websocket/websocketpp/transport/base/: endpoint.hpp
server/transport/websocket/websocketpp/transport/debug/: connection.hpp  endpoint.hpp
server/transport/websocket/websocketpp/transport/iostream/: connection.hpp  endpoint.hpp
server/transport/websocket/websocketpp/transport/stub/: connection.hpp
test/: BaseTest.cpp  registrar_test.cpp  server_json_test.cpp
